--- a/form.html
+++ b/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/251ae84f7c.js" crossorigin="anonymous"></script>
     <title>My Website</title>
   </head>
   <body>
@@ -13,15 +14,15 @@
         <br />
         <h1>Contact Us</h1>
         <label for="name">Name</label><br />
-        <input type="text" required name="name" value="" id="name" size="35">
+        <input required type="text" name="name" value="" id="name" size="35">
         <br />
         <br />
         <label for="email">E-mail</label><br />
-        <input type="email" required name="email" value="" id="email" size="35">
+        <input required type="email" name="email" value="" id="email" size="35">
         <br />
         <br />
         <label for="message">Your Message</label><br />
-        <textarea name="message" required rows="8" cols="80" id="message"></textarea>
+        <textarea required name="message" rows="8" cols="80" id="message"></textarea>
         <br />
         <br />
         <button type="button" name="button">Send</button>
