margin and box-shadow

--- a/form.html
+++ b/form.html
@@ -14,17 +14,11 @@
         <br />
         <h1>Contact Us</h1>
         <label for="name">Name</label><br />
-        <input required type="text" name="name" value="" id="name" size="35">
-        <br />
-        <br />
+        <input required type="text" name="name" value="" id="name"><br />
         <label for="email">E-mail</label><br />
-        <input required type="email" name="email" value="" id="email" size="35">
-        <br />
-        <br />
+        <input required type="email" name="email" value="" id="email"><br />
         <label for="message">Your Message</label><br />
-        <textarea required name="message" rows="8" cols="80" id="message"></textarea>
-        <br />
-        <br />
+        <textarea required name="message"  id="message"></textarea><br />
         <button type="button" name="button">Send</button>
       </form>
 
